<resources>
    <string name="app_name">Calculator</string>
    <string name="ResetAll">C</string>
    <string name="ResetOne">CE</string>
    <string name="start">0</string>
    <string name="one">1</string>
    <string name="two">2</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="enter">=</string>
    <string name="divide">/</string>
    <string name="multiply">*</string>
    <string name="substract">-</string>
    <string name="add">+</string>
    <string name="readme">Read me! (Please scroll down)</string>
    <string name="introduction">- Press C after each computation</string>
    <string name="introduction2">- Only enter two operands at a time with one operator in between</string>
    <string name="divisionError">E(press C)</string>
    <string name="error">E(press C)</string>
    <string name="notFound">E(press C)</string>
    <string name="empty">E(press C)</string>
</resources>
