<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="mingyokim3.com.calculator.MainActivity">
    <TextView
        android:id="@+id/disp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:textSize="75sp" />
    <TableRow>
        <Button
            android:layout_weight="1"
            android:text="@string/ResetAll"
            android:textSize="40sp"
            android:onClick="resetAll" />
        <Button
            android:id="@+id/zero"
            android:layout_weight="1"
            android:text="@string/zero"
            android:textSize="40sp"
            android:onClick="inputNum"/>
        <Button
            android:layout_weight="1"
            android:text="@string/enter"
            android:textSize="40sp"
            android:onClick="enter"/>
        <Button
            android:id="@+id/div"
            android:layout_weight="1"
            android:text="@string/divide"
            android:textSize="40sp"
            android:onClick="inputOp"/>
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/one"
            android:layout_weight="1"
            android:text="@string/one"
            android:textSize="40sp"
            android:onClick="inputNum"/>
        <Button
            android:id="@+id/two"
            android:layout_weight="1"
            android:text="@string/two"
            android:textSize="40sp"
            android:onClick="inputNum"/>
        <Button
            android:id="@+id/three"
            android:layout_weight="1"
            android:text="@string/three"
            android:textSize="40sp"
            android:onClick="inputNum"/>
        <Button
            android:id="@+id/mul"
            android:layout_weight="1"
            android:text="@string/multiply"
            android:textSize="40sp"
            android:onClick="inputOp"/>
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/four"
            android:layout_weight="1"
            android:text="@string/four"
            android:textSize="40sp"
            android:onClick="inputNum"/>
        <Button
            android:id="@+id/five"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/five"
            android:onClick="inputNum"/>
        <Button
            android:id="@+id/six"
            android:layout_weight="1"
            android:textSize="40sp"
            android:text="@string/six"
            android:onClick="inputNum"/>
        <Button
            android:id="@+id/sub"
            android:layout_weight="1"
            android:text="@string/substract"
            android:textSize="40sp"
            android:onClick="inputOp"/>
    </TableRow>
    <TableRow>
        <Button
            android:id="@+id/seven"
            android:layout_weight="1"
            android:text="@string/seven"
            android:textSize="40sp"
            android:onClick="inputNum"/>
        <Button
            android:id="@+id/eight"
            android:layout_weight="1"
            android:text="@string/eight"
            android:textSize="40sp"
            android:onClick="inputNum"/>
        <Button
            android:id="@+id/nine"
            android:layout_weight="1"
            android:text="@string/nine"
            android:textSize="40sp"
            android:onClick="inputNum"/>
        <Button
            android:id="@+id/add"
            android:layout_weight="1"
            android:text="@string/add"
            android:textSize="40sp"
            android:onClick="inputOp"/>
    </TableRow>
    <TextView
        android:text="@string/readme"
        android:textSize="25sp"
        android:layout_marginTop="20sp"/>
    <TextView
        android:text="@string/introduction"
        android:textSize="25sp"
        android:layout_marginTop="20sp"/>
    <TextView
        android:text="@string/introduction2"
        android:textSize="25sp"
        android:layout_marginTop="20sp"/>
</TableLayout>
</ScrollView>
